# backtest

./: 5m_from_binacne.go  DOCUMENTATION.md  README.md  add_percentage.py  check_data.ps1  docker-compose.yml  ema_atr_trades.csv  example_table_output.txt  go.mod  go.sum  install_candles.go  install_derived.go  install_derived_clean.go  mantro.go  run_verbose_backtest.ps1  trades.csv
.github/workflows/: ci-cd.yml  determinism.yml
cmd/resample_csv/: main.go
cmd/run_donchian_basis/: main.go
cmd/run_ema_atr/: main.go
cmd/run_ichimoku_baseline/: main.go
docs/: COMPLETE_SPEC.md
go-services/: Dockerfile  go.mod  go.sum
go-services/cmd/aggregate_5m/: btc_5min_aggregated.csv  main.go
go-services/cmd/binance_downloader/: main.go
go-services/cmd/data_generator/: -csv  btc_data.csv  main.go
go-services/cmd/data_ingest/: main.go
go-services/cmd/indicator_parity/: main.go
go-services/proto/: proto.go
go-services/strategies/: donchian_basis_strategy.go  ema_atr_strategy.go  ichimoku_baseline_strategy.go
monitoring/: backtest_rules.yml  prometheus.yml
rust-engine/: Cargo.toml  Dockerfile
rust-engine/examples/: trade_table_demo.rs
rust-engine/src/: export.rs  indicators.rs  lib.rs  monitoring.rs  precision.rs  simulator.rs  trade_table.rs  types.rs  versioning.rs  wasm.rs
rust-engine/tests/: trade_table_tests.rs
schemas/: btcusdt_ingest.sql  clickhouse_schema.sql  clickhouse_views.sql  professional_ohlcv_schema.sql  results_schema.sql
scripts/: deploy.sh  deploy_professional_ohlcv.sh
tests/: determinism_tests.rs
tests/config/: determinism_tests.json
wasm-strategies/rust/: Cargo.toml  ema_rsi_strategy.rs
wasm-strategies/typescript/: bollinger_bands_strategy.ts  package.json
(+47 files in other folders)
