[package]
name = "backtest-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# SIMD and performance
rayon = "1.8"
num-traits = "0.2"
num-derive = "0.3"

# Decimal precision for money/fees
rust_decimal = { version = "1.32", features = ["serde", "std"] }
rust_decimal_macros = "1.32"

# Arrow for columnar data (temporarily disabled due to Chrono conflicts)
# arrow = { version = "44" }
# parquet = "44"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WASM support
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation (deterministic)
rand = "0.8"
rand_pcg = "0.3"

# Math utilities
statrs = "0.16"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "indicators"
harness = false

[profile.release]
# Disable fast-math and FMA for deterministic floating-point
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
overflow-checks = true

