[package]
name = "ema-rsi-strategy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Disable fast-math for determinism
overflow-checks = true

